# StockReSearchMCP

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  STREAMING_BUILD_GUIDE.md  TEST_CLAUDE_CONNECTION.md  pyproject.toml  requirements.txt  test_installation.py  tickers.json
docs/: API_INTEGRATION_SUMMARY.md  ENABLE_REAL_API.md  REAL_API_GUIDE.md
examples/: basic_usage.py  real_api_integration.py  sec_io.py
scripts/: launch_gradio.sh
src/gradio_frontend/: gradio_app.py
src/sector/: Dockerfile  builder.py  check_chroma_db.py  embeddings_and_chroma.py  extract_text.py  fetch_filings.py  fetch_tickers.py  logging_log.py  query_chroma.py  search_api.py  sec_parser.py  test_text_extract.py  yahoo_ticker_info.py
src/stock_research_mcp/: __init__.py  server.py  types.py
src/stock_research_mcp/agents/: __init__.py  model.py  orchestrator.py  real_api_fetcher.py  sector_ticker_fetcher.py  stock_analysis_agent.py  stock_categorization_agent.py  stock_search_agent.py  streaming_builder.py
src/system_check/: test_gradio_setup.py
