[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-research-mcp-server"
version = "1.0.0"
description = "Multi-agent MCP server for comprehensive stock research and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "yfinance>=0.2.0",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "sec-edgar-downloader==4.0.3",
    "beautifulsoup4==4.12.2",
    "lxml==6.0.2",
    "openai>=2.8.0",
    "chromadb>=1.3.0",
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "tqdm>=4.67.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
stock-research-mcp = "stock_research_mcp.server:main"
